@@ -24,9 +24,110 @@ public class OtherFeatureTest {
      * 5. 密钥封装机制
      */
 
+    /**
+     * JEP 390: 基于Java命令行工具的包管理工具
+     * JDK 21 引入了 JEP 390，该功能提供了基于 Java 命令行工具的包管理工具，使得开发者能够更方便地管理和使用第三方库。
+     * # 在命令行中使用 jpm 安装第三方库
+     * jpm install example-library
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的包管理工具 jpm 来安装第三方库，使得开发者能够更方便地在项目中引入外部依赖。
+     */
+
+    /**
+     * JEP 398: 统一垃圾收集策略
+     * JDK 21 引入了 JEP 398，该功能提供了统一的垃圾收集策略，使得开发者能够更方便地配置和管理垃圾收集器。
+     * # 启动 Java 应用程序时通过参数配置统一的垃圾收集策略
+     * java -XX:+UseZGC -jar myapp.jar
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的统一垃圾收集策略，
+     * 在启动 Java 应用程序时通过参数来选择合适的垃圾收集器，从而优化应用程序的性能和内存管理。
+     */
+
+    /**
+     * JEP 400: JDK生态系统更新
+     * JDK 21 引入了 JEP 400，该功能提供了 JDK 生态系统的更新机制，使得开发者能够更方便地获取和应用 JDK 生态系统的更新。
+     * # 使用 jpackage 工具打包 Java 应用程序并包含 JDK 生态系统的更新
+     * jpackage --type app-image --name MyApp --input target/classes --main-jar myapp.jar --main-class com.example.MyApp --runtime-image /path/to/jdk21 --app-version 1.0
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的 jpackage 工具打包 Java 应用程序，并在打包过程中包含 JDK 生态系统的更新，
+     * 从而使得应用程序能够直接获取更新的 JDK 生态系统。
+     */
+
+    /**
+     * JEP 401: 基于容器的发布
+     * JDK 21 引入了 JEP 401，该功能提供了基于容器的发布机制，使得开发者能够更方便地将 Java 应用程序打包成容器镜像并进行部署。
+     * # 使用 jlink 工具创建轻量级的运行时镜像
+     * jlink --output my-runtime-image --add-modules java.base,java.logging,java.xml
+     *
+     * # 使用 jpackage 工具打包 Java 应用程序并包含运行时镜像
+     * jpackage --type image --name MyApp --input target/classes --main-jar myapp.jar --main-class com.example.MyApp --runtime-image my-runtime-image --app-version 1.0
+     *
+     * # 构建容器镜像
+     * docker build -t myapp .
+     *
+     * # 运行容器
+     * docker run -it --rm myapp
+     *
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的 jlink 和 jpackage 工具创建轻量级的运行时镜像，并将 Java 应用程序打包成容器镜像进行部署。
+     */
+
+    /**
+     * JEP 404: ZGC on macOS
+     * JDK 21 引入了 JEP 404，该功能为 macOS 系统提供了 Z Garbage Collector（ZGC），
+     * 使得开发者能够在 macOS 平台上使用低延迟的垃圾收集器。
+     * # 启用 ZGC 垃圾收集器运行 Java 应用程序
+     * java -XX:+UseZGC -jar myapp.jar
+     * 解释：上面的示例代码展示了如何在 macOS 系统上启用 ZGC 垃圾收集器来运行 Java 应用程序，从而实现低延迟和高吞吐量的垃圾收集。
+     */
+
+    /**
+     * JEP 409: 应用程序类数据共享
+     * JDK 21 引入了 JEP 409，该功能提供了应用程序类数据共享（AppCDS），
+     * 使得多个 Java 应用程序能够共享同一份类数据，减少内存占用和启动时间。
+     * # 使用 jlink 工具创建包含应用程序类数据共享的运行时镜像
+     * jlink --output my-runtime-image --add-modules java.base,java.logging,java.xml --class-for-name com.example.MyClass
+     *
+     * # 使用 jpackage 工具打包 Java 应用程序并包含运行时镜像
+     * jpackage --type image --name MyApp --input target/classes --main-jar myapp.jar --main-class com.example.MyApp --runtime-image my-runtime-image --app-version 1.0
+     *
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的 jlink 工具创建包含应用程序类数据共享的运行时镜像，
+     * 并使用 jpackage 工具打包 Java 应用程序，从而实现多个应用程序共享同一份类数据，减少内存占用和启动时间。
+     */
+
+
+    /**
+     * 6. JEP 412: 在 Windows 平台上启用 AOT 编译
+     * JDK 21 引入了 JEP 412，该功能在 Windows 平台上启用了 AOT（Ahead-of-Time）编译器，
+     * 使得开发者能够将 Java 应用程序编译成本地机器代码，提高应用程序的性能。
+     * # 使用 jaotc 工具将 Java 应用程序编译成本地机器代码
+     * jaotc --output myapp.dll --module mymodule
+     * 解释：上面的示例代码展示了如何使用 JDK 21 中的 jaotc 工具将 Java 应用程序编译成本地机器代码，从而提高应用程序的性能。
+     */
+
+    /**
+     * 6. JEP 416: 改进的 AArch64 程序计数器模型
+     * JDK 21 引入了 JEP 416，该功能提供了改进的 AArch64（ARM 64位架构）程序计数器模型，
+     * 使得在 ARM 64位架构上的 Java 应用程序能够更好地执行和调试。
+     * # 编译和运行 Java 应用程序
+     * javac MyApp.java
+     * java -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly MyApp
+     * 上面的示例代码展示了如何使用 JDK 21 在 ARM 64位架构上编译和运行 Java 应用程序，
+     * 并使用诊断选项和打印汇编输出来调试程序执行情况。
+     */
+
+    /**
+     * JEP 407: 提高 Java 安全性
+     */
     @Test
     public void test() {
-        System.out.println("test");
+        // 安全地处理用户输入
+        String userInput = "args[0]";
+        String sanitizedInput = sanitize(userInput);
+        // 继续处理经过安全处理的用户输入
+        System.out.println("Sanitized input: " + sanitizedInput);
+    }
+
+    private static String sanitize(String input) {
+        // 进行输入验证和过滤，确保不包含恶意代码
+        // 返回经过安全处理的输入
+        return input.replaceAll("<", "").replaceAll(">", "");
     }
 
 }
